--- a/app/globals.scss
+++ b/app/globals.scss
@@ -21,6 +21,12 @@
   --space-14: 256px;
   --space-15: 512px;
 
+  /* Spacing tokens */
+  --border-radius-xs: 4px;
+  --border-radius-sm: 8px;
+  --border-radius-md: 10px;
+  --border-radius-lg: 12px;
+
   /* Font size tokens */
   --font-size-1: 14px;
   --font-size-3: 16px;
@@ -39,13 +45,19 @@
 
   /* Color tokens */
   --color-beige: 255, 250, 240;
-  --color-black: 0, 0, 0;
-  --color-light-blue: 200, 220, 252, 0.4;
+  --color-black: 15, 15, 15;
+  --color-light-blue: 200, 220, 252, 0.1;
   --color-dark-blue: 10, 24, 15;
   --color-gray: 96, 96, 96;
+  --color-light-gray: 136, 136, 136;
+
+  // --color-moss-green: 118, 150, 72;
+  --color-moss-green: 70, 135, 70;
+  --color-moss-green-light: 160, 190, 90;
+  --color-moss-green-fade: 118, 137, 72, 0.13;
 
   /* Border color tokens */
-  --color-border-gray: rgb(200, 200, 200, 0.5);
+  --color-border-gray: 200, 200, 200, 0.3;
 
   /* Width tokens */
   --max-width: 880px;
@@ -57,6 +69,13 @@
   --foreground-rgb: var(--color-black);
   --background-rgb: var(--color-beige);
 
+  --logo-color: var(--color-black);
+  --logo-dot-color: var(--color-brand);
+
+  --color-description-text: var(--color-gray);
+
+  --color-brand: var(--color-moss-green);
+
   --svg-filter-mask: invert(0%) sepia(65%) saturate(3036%) hue-rotate(243deg)
     brightness(87%) contrast(109%);
 }
@@ -66,6 +85,13 @@
 
   --foreground-rgb: var(--color-beige);
   --background-rgb: var(--color-dark-blue);
+
+  --logo-color: var(--color-brand);
+  --logo-dot-color: var(--color-beige);
+
+  --color-description-text: var(--color-light-gray);
+
+  --color-brand: var(--color-moss-green-light);
 
   --svg-filter-mask: invert(91%) sepia(14%) saturate(1410%) hue-rotate(301deg)
     brightness(125%) contrast(101%);
@@ -97,10 +123,6 @@ h2 {
   color: rgba(var(--foreground-rgb));
 }
 
-p {
-  /* margin: 1rem 0; */
-}
-
 input,
 select,
 option {
@@ -109,6 +131,8 @@ option {
 
 a {
   font-weight: 700;
+  color: rgb(var(--color-brand));
+  text-decoration: none;
 }
 
 a:hover {
