--- a/components/Posts.module.scss
+++ b/components/Posts.module.scss
@@ -8,6 +8,13 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-2);
+  margin-top: var(--space-3);
+}
+
+.overlay {
+  width: 100%;
+  height: 100px;
+  background-color: blue;
 }
 
 .yearTitle {
@@ -26,17 +33,23 @@
 }
 
 .post:hover {
-  background-color: rgba(var(--color-light-blue));
+  background-color: rgba(var(--color-moss-green-fade));
+  text-decoration: none;
+}
+
+.post .content h3 {
+  color: rgba(var(--foreground-rgb));
+  text-decoration: none;
 }
 
 .post:hover .content h3 {
-  /* color: rgba(var(--color-dark-blue)); */
-  color: rgb(68, 68, 238);
+  color: rgba(var(--color-brand));
+  text-decoration: none;
 }
 
 .date {
   grid-column: 1;
-  color: rgba(var(--color-gray));
+  color: rgba(var(--color-description-text));
   font-size: var(--font-size-4);
   pointer-events: none;
 }
@@ -51,5 +64,6 @@
 }
 
 .content p {
-  color: rgba(var(--color-gray));
+  color: rgba(var(--color-description-text));
+  font-weight: 400;
 }
