--- a/components/SetThemeButton.module.scss
+++ b/components/SetThemeButton.module.scss
@@ -1,6 +1,6 @@
 .button {
-  height: 32px;
-  width: 32px;
+  height: 38px;
+  width: 38px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -18,17 +18,25 @@
   filter: var(--svg-filter-mask);
 }
 
+.button:hover {
+  /* transform: translateY(-1px); */
+  background-color: rgba(var(--color-moss-green-fade));
+  transition-duration: 0.6s ease;
+  /* transition-property: width, height; */
+  border: 2px solid rgba(var(--foreground-rgb));
+  border-radius: 10px;
+  /* box-shadow: 2px 2px 1px 1px rgba(var(--color-moss-green-fade)); */
+}
+
 .button:active {
-  height: 31px;
-  width: 31px;
-  transition-duration: 0.6s ease-in;
-  transition-property: width, height;
+  height: 37px;
+  width: 37px;
+  transition-duration: 0.6s ease-in-out;
+  border: 2px solid rgba(var(--foreground-rgb));
+  border-radius: 13px;
 }
 
 .button:hover .svg {
-  width: 16px;
-  height: 16px;
-  opacity: 0.8;
   transition-duration: 1s ease-in-out;
   transition-property: width, height;
 }
