--- a/components/BlockQuote.module.scss
+++ b/components/BlockQuote.module.scss
@@ -4,6 +4,7 @@
   border-radius: var(--border-radius-xs);
   gap: var(--space-3);
   background-color: rgb(var(--color-moss-green-fade));
+  padding-right: var(--space-3);
 }
 
 .neutral .line {
