--- a/components/Layout/PostLayout.scss
+++ b/components/Layout/PostLayout.scss
@@ -4,6 +4,7 @@
   column-gap: var(--space-5);
   align-items: stretch;
   gap: var(--space-4);
+  padding-bottom: var(--space-12);
 }
 
 .content * {
