--- a/components/Posts.module.scss
+++ b/components/Posts.module.scss
@@ -1,6 +1,8 @@
 .container {
   grid-column: 2;
   margin-top: var(--space-3);
+  margin-left: calc(-1 * var(--space-2));
+  width: calc(100% + 2 * var(--space-2));
 }
 
 .postContainer {
