--- a/components/SetThemeButton.module.scss
+++ b/components/SetThemeButton.module.scss
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   font-size: var(--font-size-4);
-  padding: var(--space-2);
+  padding: var(--space-1);
   background-color: transparent;
   border: 2px solid rgba(var(--foreground-rgb));
   border-radius: 8px;
@@ -15,7 +15,15 @@
 .svg {
   width: 18px;
   height: 18px;
-  filter: var(--svg-filter-mask);
+
+  &.light {
+    width: 24px;
+    height: 20px;
+  }
+
+  path {
+    stroke: rgba(var(--foreground-rgb));
+  }
 }
 
 .button:hover {
@@ -31,25 +39,47 @@
 .button:active {
   height: 37px;
   width: 37px;
-  transition-duration: 0.6s ease-in-out;
+  transition-duration: 0.2s;
   border: 2px solid rgba(var(--foreground-rgb));
   border-radius: 13px;
 }
 
 .button:hover .svg {
-  transition-duration: 1s ease-in-out;
+  transition-duration: 0.2s;
   transition-property: width, height;
 }
 
-.svg path {
-  stroke-dasharray: 320;
-  stroke-dashoffset: 0;
-  animation: dash 1s linear;
+.svg {
+  path {
+    fill: rgba(var(--foreground-rgb));
+  }
+
+  circle {
+    stroke-dasharray: 400;
+    stroke-dashoffset: 0;
+    animation: dash-sun 2s ease-out;
+  }
 }
 
-@keyframes dash {
+.svg.dark path {
+  fill: none;
+  stroke-dasharray: 100;
+  stroke-dashoffset: 0;
+  animation: dash-moon 0.8s ease-in-out;
+}
+
+@keyframes dash-moon {
   from {
-    stroke-dashoffset: 320;
+    stroke-dashoffset: 100;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes dash-sun {
+  from {
+    stroke-dashoffset: 440;
   }
   to {
     stroke-dashoffset: 0;
