Added subscribe feature and additional smaller components

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -18,10 +18,16 @@
   color: rgba(var(--color-brand));
 }
 
-.worldContainer {
+.earth {
   display: inline-flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
+  margin-left: var(--space-1);
+  
+  svg {
+    width: 34px;
+    height: 34px;
+  }
 }
 
 .world {
