--- a/app/globals.scss
+++ b/app/globals.scss
@@ -143,5 +143,5 @@ textarea {
   font-family: inherit;
   background-color: rgba(var(--color-input-bg));
   border: 1px solid rgba(var(--color-input-border));
-  padding: var(--space-2);
+  padding: var(--space-1) var(--space-2);
 }
