--- a/components/Comments.module.scss
+++ b/components/Comments.module.scss
@@ -1,181 +1,84 @@
 .container {
-  position: fixed;
-  bottom: var(--space-4);
-  right: var(--space-4);
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-4);
+  grid-column: 1;
+  padding: var(--space-4) 0;
 
-  .button {
-    height: 38px;
-    width: 38px;
+  h2 {
     display: flex;
     align-items: center;
-    justify-content: center;
-    font-size: var(--font-size-4);
-    padding: var(--space-1);
-    background-color: rgba(var(--background-rgb));
-    border: 2px solid rgba(var(--foreground-rgb));
-    border-radius: var(--border-radius-xs);
-    cursor: pointer;
-    z-index: 100;
-    position: relative;
-
-    .icon {
-      width: 24px;
-      height: 24px;
-    }
-
-    svg {
-      width: 24px;
-      height: 24px;
-    }
+    justify-content: flex-start;
   }
 
-  .button:hover {
-    transition-duration: 0.6s ease;
-    border: 2px solid rgba(var(--foreground-rgb));
-    border-radius: 10px;
+  .icon {
+    width: 50px;
+    height: 30px;
   }
 
-  .button:active {
-    height: 37px;
-    width: 37px;
-    transition-duration: 0.2s;
-    border: 2px solid rgba(var(--foreground-rgb));
-    border-radius: 13px;
-  }
-}
-
-.exit {
-  fill: none;
-  stroke-dasharray: 100;
-  stroke-dashoffset: 0;
-  animation: dash-moon 0.8s ease-in-out;
-}
-
-.comments {
-  position: fixed;
-  background-color: rgba(var(--background-rgb));
-  width: 380px;
-  height: 540px;
-  border: 2px solid rgba(var(--foreground-rgb));
-  border-radius: var(--border-radius-xs);
-  overflow-y: scroll;
-  z-index: 1001;
-
-  .content {
+  .commentContainer {
     display: flex;
     flex-direction: column;
     gap: var(--space-3);
-    padding: var(--space-4);
 
-    .inputContainer {
-      display: flex;
-      flex-direction: column;
+    .commentText {
+      border-top: 1px solid rgb(var(--color-border-gray));
 
-      .nameInput {
-        border: 1px solid rgba(var(--foreground-rgb));
-        border-radius: var(--border-radius-xs);
+      h4 {
+        margin: var(--space-4) 0 0 0;
+
+        span {
+          color: rgb(var(--color-description-text));
+          font-weight: 500;
+        }
+
+        .green {
+          color: rgb(var(--color-brand));
+        }
       }
-
-      .contentInput {
-        border: 1px solid rgba(var(--foreground-rgb));
-        border-radius: var(--border-radius-xs);
-        height: var(--space-13);
+      p {
+        line-height: 30px;
+        white-space: pre-line;
       }
     }
+  }
 
-    .postButton {
-      background-color: transparent;
+  .inputContainer {
+    display: flex;
+    flex-direction: column;
+
+    .nameInput {
       border: 1px solid rgba(var(--foreground-rgb));
       border-radius: var(--border-radius-xs);
-      padding: var(--space-2);
-      font-weight: 700;
-      cursor: pointer;
-
-      &:hover {
-        background-color: rgba(var(--color-moss-green-fade));
-        transition-duration: 0.25s;
-      }
     }
 
-    .error {
-      margin: 0 auto;
-      color: rgb(237, 95, 95);
+    .contentInput {
+      border: 1px solid rgba(var(--foreground-rgb));
+      border-radius: var(--border-radius-xs);
+      height: var(--space-13);
     }
   }
-}
 
-.commentContainer {
-  display: flex;
-  flex-direction: column;
-  gap: var(--space-3);
-
-  .commentText {
-    border-top: 1px solid rgb(var(--color-border-gray));
-
-    h4 {
-      margin: var(--space-2) 0;
-
-      span {
-        color: rgb(var(--color-description-text));
-        font-weight: 500;
-      }
-
-      .green {
-        color: rgb(var(--color-brand));
-      }
-    }
-    p {
-      line-height: 30px;
-      white-space: pre-line;
-    }
-  }
-}
-
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgb(0, 0, 0, 0.1);
-  z-index: 99;
-}
-
-// Large devices (desktops, 992px and up)
-@media (max-width: 992px) and (min-width: 769px) {
-}
-
-// Medium devices (tablets, 768px and up)
-@media (max-width: 768px) and (min-width: 577px) {
-  .comments {
-    position: fixed;
-    background-color: rgba(var(--background-rgb));
-    width: calc(100% - 2 * var(--space-4));
-    height: 620px;
-    border: 2px solid rgba(var(--foreground-rgb));
+  .postButton {
+    background-color: transparent;
+    border: 1px solid rgba(var(--foreground-rgb));
     border-radius: var(--border-radius-xs);
-    overflow-y: scroll;
-  }
-}
+    padding: var(--space-1) var(--space-2);
+    font-weight: 700;
+    font-size: var(--font-size-3);
+    line-height: 28px;
+    cursor: pointer;
 
-// Small devices (landscape phones, 576px and up)
-@media (max-width: 576px) {
-  .comments {
-    position: fixed;
-    background-color: rgba(var(--background-rgb));
-    width: calc(100% - 2 * var(--space-4));
-    height: 540px;
-    border: 2px solid rgba(var(--foreground-rgb));
-    border-radius: var(--border-radius-xs);
-    overflow-y: scroll;
-  }
-}
+    &:hover {
+      background-color: rgba(var(--color-moss-green-fade));
+      transition-duration: 0.25s;
+    }
 
-@keyframes dash-moon {
-  from {
-    stroke-dashoffset: 100;
-  }
-  to {
-    stroke-dashoffset: 0;
+    &:disabled {
+      //   border-color: rgb(var(--color-border-gray));
+      opacity: 0.45;
+      touch-action: none;
+      pointer-events: none;
+    }
   }
 }
