--- a/components/Comments.module.scss
+++ b/components/Comments.module.scss
@@ -6,9 +6,15 @@
   padding: var(--space-4) 0;
 
   h2 {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+    // display: flex;
+    // align-items: center;
+    // justify-content: flex-start;
+
+    span {
+      margin-left: var(--space-2);
+      display: inline-flex;
+      align-items: center;
+    }
   }
 
   .icon {
@@ -26,6 +32,8 @@
 
       h4 {
         margin: var(--space-4) 0 0 0;
+        line-height: 28px;
+        font-size: var(--font-size-4);
 
         span {
           color: rgb(var(--color-description-text));
@@ -37,7 +45,7 @@
         }
       }
       p {
-        line-height: 30px;
+        line-height: 28px;
         white-space: pre-line;
       }
     }
