--- a/components/SetThemeButton.module.scss
+++ b/components/SetThemeButton.module.scss
@@ -8,80 +8,16 @@
   padding: var(--space-1);
   background-color: transparent;
   border: 2px solid rgba(var(--foreground-rgb));
-  border-radius: 8px;
+  border-radius: var(--border-radius-sm);
   cursor: pointer;
 }
 
-.svg {
-  width: 18px;
-  height: 18px;
-
-  &.light {
-    width: 24px;
-    height: 20px;
-  }
-
-  path {
-    stroke: rgba(var(--foreground-rgb));
-  }
-}
-
 .button:hover {
-  /* transform: translateY(-1px); */
   background-color: rgba(var(--color-moss-green-fade));
-  transition-duration: 0.6s ease;
-  /* transition-property: width, height; */
   border: 2px solid rgba(var(--foreground-rgb));
-  border-radius: 10px;
-  /* box-shadow: 2px 2px 1px 1px rgba(var(--color-moss-green-fade)); */
 }
 
-.button:active {
-  height: 37px;
-  width: 37px;
-  transition-duration: 0.2s;
-  border: 2px solid rgba(var(--foreground-rgb));
-  border-radius: 13px;
-}
-
-.button:hover .svg {
-  transition-duration: 0.2s;
-  transition-property: width, height;
-}
-
-.svg {
-  path {
-    fill: rgba(var(--foreground-rgb));
-  }
-
-  circle {
-    stroke-dasharray: 400;
-    stroke-dashoffset: 0;
-    animation: dash-sun 2s ease-out;
-  }
-}
-
-.svg.dark path {
-  fill: none;
-  stroke-dasharray: 100;
-  stroke-dashoffset: 0;
-  animation: dash-moon 0.8s ease-in-out;
-}
-
-@keyframes dash-moon {
-  from {
-    stroke-dashoffset: 100;
-  }
-  to {
-    stroke-dashoffset: 0;
-  }
-}
-
-@keyframes dash-sun {
-  from {
-    stroke-dashoffset: 440;
-  }
-  to {
-    stroke-dashoffset: 0;
-  }
+.sun {
+  width: 20px;
+  height: 20px;
 }
