--- a/components/TextArea.module.scss
+++ b/components/TextArea.module.scss
@@ -3,11 +3,12 @@
   flex-direction: column;
 
   label {
+    font-weight: 700;
     line-height: 28px;
   }
 
   textarea {
-    border: 1px solid rgba(var(--foreground-rgb));
+    border: 2px solid rgba(var(--foreground-rgb));
     border-radius: var(--border-radius-xs);
     height: var(--space-13);
     line-height: 28px;
