--- a/components/TextInput.module.scss
+++ b/components/TextInput.module.scss
@@ -3,11 +3,12 @@
   flex-direction: column;
 
   label {
+    font-weight: 700;
     line-height: 28px;
   }
 
   input {
-    border: 1px solid rgba(var(--foreground-rgb));
+    border: 2px solid rgba(var(--foreground-rgb));
     border-radius: var(--border-radius-xs);
     line-height: 28px;
     font-size: var(--font-size-3);
