--- a/components/HeroImage.module.scss
+++ b/components/HeroImage.module.scss
@@ -2,14 +2,14 @@
   width: 100%;
   height: 420px;
   object-fit: cover;
-  border: 1px solid rgb(var(--foreground-rgb));
+  border: 2px solid var(--color-border-gray);
   border-radius: var(--border-radius-xs);
 }
 
 .caption {
   width: 75%;
   margin: 0 auto;
-  color: rgb(var(--color-description-text));
+  color: var(--color-description-text);
   text-align: center;
   font-style: italic;
 }
