--- a/components/Footer.module.scss
+++ b/components/Footer.module.scss
@@ -5,7 +5,7 @@
   align-items: stretch;
   gap: var(--space-4);
   padding: var(--space-8) var(--space-4);
-  border-top: 2px solid rgb(var(--color-border-gray));
+  border-top: 2px solid var(--color-border-gray);
 }
 
 .content {
