--- a/components/LoadingThemeButton.module.scss
+++ b/components/LoadingThemeButton.module.scss
@@ -3,7 +3,7 @@
   line-height: 1rem;
   padding: 0.4rem;
   background-color: transparent;
-  border: 2px solid rgba(var(--foreground-rgb));
+  border: 2px solid var(--foreground-rgb);
   border-radius: 8px;
   cursor: pointer;
 }
