--- a/components/Posts.module.scss
+++ b/components/Posts.module.scss
@@ -11,12 +11,6 @@
   gap: var(--space-2);
 }
 
-.overlay {
-  width: 100%;
-  height: 100px;
-  background-color: blue;
-}
-
 .yearTitle {
   margin-bottom: var(--space-2);
   padding-left: var(--space-2);
@@ -33,23 +27,23 @@
 }
 
 .post:hover {
-  background-color: rgba(var(--color-moss-green-fade));
+  background-color: var(--color-blue-fade);
   text-decoration: none;
 }
 
 .post .content h3 {
-  color: rgba(var(--foreground-rgb));
+  color: var(--foreground-rgb);
   text-decoration: none;
 }
 
 .post:hover .content h3 {
-  color: rgba(var(--color-brand));
+  color: var(--color-brand);
   text-decoration: none;
 }
 
 .date {
   grid-column: 1;
-  color: rgba(var(--color-description-text));
+  color: var(--color-description-text);
   font-size: var(--font-size-4);
   pointer-events: none;
 }
@@ -64,6 +58,6 @@
 }
 
 .content p {
-  color: rgba(var(--color-description-text));
+  color: var(--color-description-text);
   font-weight: 400;
 }
