--- a/components/SetThemeButton.module.scss
+++ b/components/SetThemeButton.module.scss
@@ -7,14 +7,14 @@
   font-size: var(--font-size-4);
   padding: var(--space-1);
   background-color: transparent;
-  border: 2px solid rgba(var(--foreground-rgb));
+  border: 2px solid var(--foreground-rgb);
   border-radius: var(--border-radius-sm);
   cursor: pointer;
 }
 
 .button:hover {
-  background-color: rgba(var(--color-moss-green-fade));
-  border: 2px solid rgba(var(--foreground-rgb));
+  background-color: var(--color-moss-green-fade);
+  border: 2px solid var(--foreground-rgb);
 }
 
 .sun {
