--- a/components/SpotifyPill.module.scss
+++ b/components/SpotifyPill.module.scss
@@ -18,8 +18,8 @@
   width: 100%;
   height: 80px;
   border-radius: 12px;
-  border: 1px solid rgba(var(--foreground-rgb));
-  background-color: rgba(var(--foreground-rgb));
+  border: 1px solid var(--foreground-rgb);
+  background-color: var(--foreground-rgb);
   /* The shine that's going to move across the skeleton: */
   background-image: linear-gradient(
     30deg,
