--- a/components/TextArea.module.scss
+++ b/components/TextArea.module.scss
@@ -8,7 +8,7 @@
   }
 
   textarea {
-    border: 2px solid rgba(var(--foreground-rgb));
+    border: 2px solid var(--foreground-rgb);
     border-radius: var(--border-radius-xs);
     height: var(--space-13);
     line-height: 28px;
