--- a/components/TextInput.module.scss
+++ b/components/TextInput.module.scss
@@ -8,7 +8,7 @@
   }
 
   input {
-    border: 2px solid rgba(var(--foreground-rgb));
+    border: 2px solid var(--foreground-rgb);
     border-radius: var(--border-radius-xs);
     line-height: 28px;
     font-size: var(--font-size-3);
