--- a/components/TextLink.module.scss
+++ b/components/TextLink.module.scss
@@ -38,3 +38,20 @@
     background-position: 500px 19px;
   }
 }
+
+// Large devices (desktops, 992px and up)
+@media (max-width: 992px) and (min-width: 769px) {
+}
+
+// Medium devices (tablets, 768px and up)
+@media (max-width: 768px) and (min-width: 621px) {
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 620px) {
+  .link {
+    &:hover {
+      background-size: 10px 20px;
+    }
+  }
+}
