--- a/components/FeaturedPosts.module.scss
+++ b/components/FeaturedPosts.module.scss
@@ -11,7 +11,8 @@
   flex-direction: column;
   padding: var(--space-3);
   gap: var(--space-2);
-  width: calc(33% - var(--space-4));
+  min-width: calc(33.333% - var(--space-3));
+  flex: 1;
   border: 2px solid var(--color-border-gray);
   border-radius: var(--border-radius-xs);
   cursor: pointer;
@@ -88,5 +89,6 @@
 @media (max-width: 576px) {
   .featured {
     width: 100%;
+    flex: auto;
   }
 }
