--- a/components/Posts.module.scss
+++ b/components/Posts.module.scss
@@ -2,6 +2,7 @@
   grid-column: 2;
   margin-left: calc(-1 * var(--space-2));
   width: calc(100% + 2 * var(--space-2));
+  margin-bottom: var(--space-12);
 }
 
 .postContainer {
