Some house keeping, updated projects page, button styling, added map to now page

--- a/components/Project.module.scss
+++ b/components/Project.module.scss
@@ -70,7 +70,7 @@
         }
 
         &:hover {
-          background-color: var(--color-moss-green-fade);
+          background-color: var(--color-blue-fade);
 
           svg {
             transform: rotate(45deg) translateX(1px) translateY(-3px);
